--- a/courses.html
+++ b/courses.html
@@ -60,7 +60,7 @@
 </div>
 <button class="scroll_btn"><i class="fa-solid fa-arrow-up"></i></button>
 
-<!-- ****************************************  *********************************************** -->
+<!-- **************************************** Courses *********************************************** -->
  <div class="container">
     <div class="row mt-5 mb-5" id="main_div">
 
@@ -78,24 +78,35 @@
         </div>
         <div class="col-lg-2 col-md-4 col-sm-12">
           <h4>Qiuck Links</h4>
-          <a href="" class="link-offset-2 link-underline link-underline-opacity-0"><i class="fa-solid fa-chevron-right pe-2"></i>About Us</a><br>
-          <a href="" class="link-offset-2 link-underline link-underline-opacity-0"><i class="fa-solid fa-chevron-right pe-2"></i>Contact Us</a><br>
-          <a href="" class="link-offset-2 link-underline link-underline-opacity-0"><i class="fa-solid fa-chevron-right pe-2"></i>Privacy policy</a><br>
-          <a href="" class="link-offset-2 link-underline link-underline-opacity-0"><i class="fa-solid fa-chevron-right pe-2"></i>Terms & Conditions</a>
+          <a href="" class="link-offset-2 link-underline link-underline-opacity-0">
+            <i class="fa-solid fa-chevron-right pe-2"></i>About Us</a><br>
+          <a href="" class="link-offset-2 link-underline link-underline-opacity-0">
+            <i class="fa-solid fa-chevron-right pe-2"></i>Contact Us</a><br>
+          <a href="" class="link-offset-2 link-underline link-underline-opacity-0">
+            <i class="fa-solid fa-chevron-right pe-2"></i>Privacy policy</a><br>
+          <a href="" class="link-offset-2 link-underline link-underline-opacity-0">
+            <i class="fa-solid fa-chevron-right pe-2"></i>Terms & Conditions</a>
         </div>
         <div class="col-lg-2 col-md-4 col-sm-12">
-          <p class="fs-3">Contac</p>
-            <a href="" class="link-offset-2 link-underline link-underline-opacity-0"><i class="fa-solid fa-location-dot pe-2"></i>Assiut /Egypt</a><br>
-            <a href="" class="link-offset-2 link-underline link-underline-opacity-0"><i class="fa-solid fa-phone pe-2"></i>+01207406459</a><br>
-            <a href="" class="link-offset-2 link-underline link-underline-opacity-0"><i class="fa-solid fa-envelope pe-2"></i>magedibrahim0155</a>
+          <p class="fs-3">Contact</p>
+            <a href="" class="link-offset-2 link-underline link-underline-opacity-0">
+              <i class="fa-solid fa-location-dot pe-2"></i>Assiut /Egypt</a><br>
+            <a href="" class="link-offset-2 link-underline link-underline-opacity-0">
+              <i class="fa-solid fa-phone pe-2"></i>+01207406459</a><br>
+            <a href="" class="link-offset-2 link-underline link-underline-opacity-0">
+              <i class="fa-solid fa-envelope pe-2"></i>magedibrahim0155</a>
         </div>
         <div class="col-lg-2 col-md-4 col-sm-12">
           <p class="fs-3">Compliement</p>
           <p>Please Contact With us Via:</p>
-            <a href="" class="link-offset-2 link-underline link-underline-opacity-0"><i class="fa-brands fa-facebook pe-2"></i>Facebook</a><br>
-            <a href="" class="link-offset-2 link-underline link-underline-opacity-0"><i class="fa-brands fa-whatsapp pe-2"></i> +01207406459</a><br>
-            <a href="" class="link-offset-2 link-underline link-underline-opacity-0"><i class="fa-solid fa-envelope pe-2"></i>email</a><br>
-            <a href="" class="link-offset-2 link-underline link-underline-opacity-0"><i class="fa-brands fa-instagram"></i> Instgram</a>
+            <a href="" class="link-offset-2 link-underline link-underline-opacity-0">
+              <i class="fa-brands fa-facebook pe-2"></i>Facebook</a><br>
+            <a href="" class="link-offset-2 link-underline link-underline-opacity-0">
+              <i class="fa-brands fa-whatsapp pe-2"></i> +01207406459</a><br>
+            <a href="" class="link-offset-2 link-underline link-underline-opacity-0">
+              <i class="fa-solid fa-envelope pe-2"></i>email</a><br>
+            <a href="" class="link-offset-2 link-underline link-underline-opacity-0">
+              <i class="fa-brands fa-instagram"></i> Instgram</a>
         </div>
         <div class="col-lg-2 col-md-4 col-sm-12 ps-2">
           <p class="fs-3 ps-3">Services</p>
