--- a/sign.html
+++ b/sign.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="sign.css">
     <title>Sign in</title>
 </head>
-<body style="background-color: #f0fcfc;">
+<body >
     <div class="container">
         <div class="row ">
           
