--- a/sign_up.html
+++ b/sign_up.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="sign_up.css">
     <title>Sign Up</title>
 </head>
-<body style="background-color: #f0fcfc;">
+<body>
     <div class="container">
         <div class="row ">
             <div class="col-lg-1 col-md-1 "></div>
@@ -25,7 +25,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-12 ">
+            <div class="col-lg-6 col-md-6 col-sm-12 Sign_up_div">
                 
                 <form class="form_div px-5" id="form">
 
