--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 
  <!-- ****************************this is(Navbar) Div***************************** -->
     <nav id="navbar" class="navbar navbar-expand-lg  ">
-        <div class="container-fluid ">
+        <div class="container-fluid navbar_div ">
             <a class="navbar-brand ps-4 nav-logo" href="home.html"><h2 class="nav-logo">
             <i class="fa fa-book me-1 nav-logo"></i>eLEARNING</h2></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -193,7 +193,7 @@
         <div class="col-lg-7 col-md-12 col-sm-12 cours_div">
           <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 position-relative mb-3 Categories_img">
-              <div class="card ">
+              <div class="card " id="card1">
                 <img src="img\pexels-tranmautritam-326503.jpg" class="card-img web_img " alt="...">
                 <div class=" web_card">
                   <h6 class="card-title">Web Design</h6>
